--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Moja Express Aplikacija</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+</head>
+
+<body>
+    {{{body}}}
+</body>
+
+</html>
