novo 14.12.2023 Json web token

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Moja Express Aplikacija</title>
+    <title>Moja Express aplikacija</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
