--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -1,12 +1,11 @@
 <div class="hero min-h-screen bg-base-200">
     <div class="hero-content">
         <div class="max-w-md">
-            <h1 class="text-5xl font-bold">Regristracija korisnika</h1>
+            <h1 class="text-5xl font-bold">Registracija korisnika</h1>
 
             {{#if result.display_form}}
             <form method="post" action="/users/signup">
                 <div class="py-6">
-
                     <div>
                         <label class="form-control w-full max-w-xs">
                             <div class="label">
@@ -16,7 +15,6 @@
                                 class="input input-bordered w-full max-w-xs" required="" />
                         </label>
                     </div>
-
                     <div>
                         <label class="form-control w-full max-w-xs">
                             <div class="label">
@@ -35,7 +33,6 @@
                                 class="input input-bordered w-full max-w-xs" />
                         </label>
                     </div>
-
                     <div>
                         <label class="form-control w-full max-w-xs">
                             <div class="label">
@@ -45,11 +42,24 @@
                                 class="input input-bordered w-full max-w-xs" />
                         </label>
                     </div>
-
                 </div>
                 <input type="submit" class="btn btn-primary" value="Potvrdi" />
                 <input type="reset" class="btn btn-neutral" value="Poništi" />
             </form>
+            {{/if}}
+
+            {{#if result.validation_error}}
+            <div class="mt-4">
+                <div class="card w-96 bg-error text-black">
+                    <div class="card-body">
+                        <h2 class="card-title">Greška!</h2>
+                        <p>
+                            Dogodila se greška prilikom provjere podataka, provjerite svoj unos
+                            i pokušajte ponovno!
+                        </p>
+                    </div>
+                </div>
+            </div>
             {{/if}}
 
             {{#if result.database_error}}
@@ -78,14 +88,13 @@
             </div>
             {{/if}}
 
-
             {{#if result.success}}
             <div class="mt-4">
                 <div class="card w-96 bg-primary text-primary-content">
                     <div class="card-body">
                         <h2 class="card-title">Uspjeh!</h2>
                         <p>
-                            Uspješno ste se regristrirali, možete nastaviti s radom!
+                            Uspješno ste se registrirali, možete nastaviti s radom!
                         </p>
                         <div class="card-actions justify-end">
                             <a class="btn" href="/users/signin">Nastavi na prijavu</a>
