--- a/views/competitions/index.handlebars
+++ b/views/competitions/index.handlebars
@@ -1,1 +1,5 @@
-<h1>Moja natjecanja</h1>
+<div class="p-2">
+    {{#if user.is_admin }}
+    <a href="/competitions/add" class="btn btn-primary">Novo natjecanje</a>
+    {{/if}}
+</div>
