--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1852,6 +1852,13 @@ html {
   margin-top: 1rem;
 }
 
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
 .flex {
   display: flex;
 }
