--- a/views/competitions/index.handlebars
+++ b/views/competitions/index.handlebars
@@ -23,7 +23,7 @@
                     <th>{{this.id}}</th>
                     <td>{{this.name}}</td>
                     <td>
-                        <div class="line-clamp">
+                        <div class="line-clamp-2">
                             {{this.description}}
                         </div>
                     </td>
@@ -32,8 +32,12 @@
                     </td>
                     <td>{{this.author}}</td>
                     <td class="flex flex-wrap gap-2">
-                        <a href="/competitions/edit/{{this.id}}" class="btn btn-accent btn-xs ">Uredi </a>
-                        <a href="/competitions/delete/{{this.id}}" class="btn btn-error btn-xs ">Briši </a>
+                        <a href="/competitions/apply/{{this.id}}" class="btn btn-primary btn-xs">Prijava</a>
+                        {{#if ../user.is_admin }}
+                        <a href="/competitions/edit/{{this.id}}" class="btn btn-accent btn-xs">Uredi</a>
+                        <a href="/competitions/delete/{{this.id}}" class="btn btn-error btn-xs">Briši</a>
+                        {{/if}} 
+                        
                     </td>
                 </tr>
                 {{/each}}
